--- a/Applications/MineCodeIDE/Localization/Russian.lang
+++ b/Applications/MineCodeIDE/Localization/Russian.lang
@@ -1,4 +1,7 @@
 {
+	debugging = "Отладчик на строке ",
+	runtimeError = "Ошибка при выполнении программы",
+	variables = "Значения переменных:",
 	scalePlus = "Увеличить масштаб",
 	scaleMinus = "Уменьшить масштаб",
 	pathToFile = "Путь к файлу",
@@ -31,9 +34,7 @@
 	saveAs = "Сохранить как",
 	colorScheme = "Цветовая схема",
 	color = "Цвет",
-	toggleLeftToolBar = "Перключить файловый менеджер",
-	toggleTopToolBar = "Переключить панель инстурментов",
-	toggleBottomToolBar = "Переключить строку поиска",
+	toggleTopToolBar = "Показать панель инстурментов",
 	find = "Найти",
 	findSomeShit = "Давай найдем какую-нибудь хуйню…",
 	cut = "Вырезать",
