--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,6 +1,7 @@
 {	
 	debugging = "Debugger on line ",
 	runtimeError = "Runtime error",
+	variablesNotAvailable = "No variables found",
 	variables = "Values of the variables:",
 	scalePlus = "Increase scale",
 	scaleMinus = "Decrease scale",
