--- a/Applications/MineCodeIDE/Localization/Russian.lang
+++ b/Applications/MineCodeIDE/Localization/Russian.lang
@@ -1,6 +1,7 @@
 {
 	debugging = "Отладчик на строке ",
 	runtimeError = "Ошибка при выполнении программы",
+	variablesNotAvailable = "Не найдено возможных переменных",
 	variables = "Значения переменных:",
 	scalePlus = "Увеличить масштаб",
 	scaleMinus = "Уменьшить масштаб",
