--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,4 +1,6 @@
 {	
+	url = "http://example.com/something.lua",
+	getFromWeb = "Download from URL",
 	debugging = "Debugger on line ",
 	runtimeError = "Runtime error",
 	variablesNotAvailable = "No variables found",
