--- a/Applications/MineCodeIDE/Localization/Russian.lang
+++ b/Applications/MineCodeIDE/Localization/Russian.lang
@@ -1,4 +1,5 @@
 {
+	selectAndPasteColor = "Выбрать и вставить цвет",
 	enableAutoBrackets = "Включить авто-скобки",
 	disableAutoBrackets = "Отключить авто-скобки",
 	url = "http://example.com/something.lua",
