--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,4 +1,6 @@
 {	
+	enableAutocompletion = "Enable autocompletion",
+	disableAutocompletion = "Disable autocompletion",
 	selectAndPasteColor = "Select and paste color",
 	enableAutoBrackets = "Enable autobrackets",
 	disableAutoBrackets = "Disable autobrackets",
@@ -24,7 +26,7 @@
 	cursorBlinkDelay = "Blink delay",
 	selection = "Selection: ",
 	none = "none",
-	view = "View",
+	properties = "Properties",
 	about = "About",
 	quit = "Quit from MineCode",
 	line = " line, ",
