Добавлена фича быстрого перехода к указанной строке

--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,4 +1,6 @@
 {	
+	gotoLine = "Goto line",
+	lineNumber = "Line",
 	enableAutocompletion = "Enable autocompletion",
 	disableAutocompletion = "Disable autocompletion",
 	selectAndPasteColor = "Select and paste color",
