--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -1,7 +1,7 @@
 {
 	pressAnyKeyToContinue = "Нажмите любую клавишу, чтобы продолжить",
 	screensaver = "Заставка",
-	screensaverDelay = "Задрежка",
+	screensaverDelay = "Задержка",
 	screensaverDisabled = "Отключена",
 
 	areYouSure = "Вы уверены?",
@@ -77,7 +77,7 @@
 	fingerprintCreated = "Биометрический снимок создан",
 	accessDenied = "Доступ запрещен",
 	welcomeBack = "Добро пожаловать, ",
-	passwordsAreDifferent = "Пароли различаются",
+	passwordsAreDifferent = "Пароли не совпадают",
 	incorrectPassword = "Неверный пароль",
 	mineOSCreatorUsedMasterPassword = "Создатель операционной системы использовал мастер-ключ",
 	loginToSystem = "Вход в систему",
