Добавлена возможность изменения разрешения экрана

--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -12,8 +12,7 @@
 	runtimeError = "Runtime error",
 	variablesNotAvailable = "No variables found",
 	variables = "Values of the variables:",
-	scalePlus = "Increase scale",
-	scaleMinus = "Decrease scale",
+	changeResolution = "Change screen resolution",
 	pathToFile = "Path to file",
 	selectWord = "Select current word",
 	gotoCyka = "Goto",
