--- a/Applications/MineCodeIDE/Localization/Russian.lang
+++ b/Applications/MineCodeIDE/Localization/Russian.lang
@@ -12,8 +12,7 @@
 	runtimeError = "Ошибка при выполнении программы",
 	variablesNotAvailable = "Не найдено возможных переменных",
 	variables = "Значения переменных:",
-	scalePlus = "Увеличить масштаб",
-	scaleMinus = "Уменьшить масштаб",
+	changeResolution = "Изменить разрешение экрана",
 	pathToFile = "Путь к файлу",
 	selectWord = "Выделить текущее слово",
 	gotoCyka = "Переход",
