Добавлена поддержка нескольких брейкпоинтов и продолжения выполнения программы после

--- a/Applications/MineCodeIDE/Localization/English.lang
+++ b/Applications/MineCodeIDE/Localization/English.lang
@@ -1,4 +1,8 @@
 {	
+	addBreakpoint = "Add breakpoint",
+	clearBreakpoints = "Clear breakpoints",
+	finishDebug = "Stop",
+	continueDebug = "Continue",
 	gotoLine = "Goto line",
 	lineNumber = "Line",
 	enableAutocompletion = "Enable autocompletion",
