--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -57,7 +57,7 @@
 	aboutSystem = "Об этом ПК",
 	updates = "Обновления",
 	shutdown = "Выключить",
-	logout = "Разлогиниться",
+	logout = "Выйти",
 	reboot = "Перезагрузить",
 	returnToShell = "Вернуться в Shell",
 
