--- a/MineOS/Languages/English.lang
+++ b/MineOS/Languages/English.lang
@@ -68,18 +68,18 @@
 	newPassword = "New password",
 	setProtectionMethod = "Change computer protection method",
 	wrongOldPassword = "Wrong old password!",
-	passwordSucessfullyChanged = "Password have been successfully changed!",
+	passwordSucessfullyChanged = "Password has been successfully changed!",
 	withoutProtection = "Without protection",
 	passwordProtection = "Password protection",
 	biometricProtection = "Biometric protection",
-	putFingerToVerify = "Put your finger to authorization",
-	putFingerToRegister = "Put your finger to create biometric signature",
+	putFingerToVerify = "Put your finger to authorizate",
+	putFingerToRegister = "Put your finger to create a biometric signature",
 	fingerprintCreated = "Biometric signature has been created",
 	accessDenied = "Access denied",
 	welcomeBack = "Welcome, ",
 	passwordsAreDifferent = "Passwords are different",
 	incorrectPassword = "Incorrect password",
-	mineOSCreatorUsedMasterPassword = "The creator of this operating system have used Master-Password",
+	mineOSCreatorUsedMasterPassword = "The creator of this operating system has used Master-Password",
 	loginToSystem = "Login",
 
 	colorScheme = "Color scheme",
