--- a/Installer/Russian.lang
+++ b/Installer/Russian.lang
@@ -7,4 +7,5 @@
 	reboot = "Перезагрузить",
 	needToReboot = "Система установлена, наслаждайтесь",
 	terms = "Я принимаю условия соглашения",
+	flashingEEPROM = "Идет прошивка BIOS...",
 }
