Хуя вкусная обнова

--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -1,4 +1,5 @@
 {
+	resolution = "Разрешение экрана",
 	pressAnyKeyToContinue = "Нажмите любую клавишу, чтобы продолжить",
 	screensaver = "Заставка",
 	screensaverDelay = "Задержка",
