Хуйня пизда вагина

--- a/MineOS/Localization/English.lang
+++ b/MineOS/Localization/English.lang
@@ -56,8 +56,8 @@
 	sortByType = "Sort by type",
 	sortByName = "Sort by name",
 	sortByDate = "Sort by date",
-	showFileFormat = "Show file format",
-	hideFileFormat = "Hide file format",
+	showExtension = "Show file extension",
+	hideExtension = "Hide file extension",
 	showHiddenFiles = "Show hidden files",
 	hideHiddenFiles = "Don't show hidden files",
 	showApplicationIcons = "Show application icons",
