--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -56,8 +56,8 @@
 	sortByType = "Сортировать по типу",
 	sortByName = "Сортировать по имени",
 	sortByDate = "Сортировать по дате",
-	showFileFormat = "Показывать формат файлов",
-	hideFileFormat = "Скрывать формат файлов",
+	showExtension = "Показывать расширение файлов",
+	hideExtension = "Скрывать расширение файлов",
 	showHiddenFiles = "Показывать скрытые файлы",
 	hideHiddenFiles = "Не показывать скрытые файлы",
 	showApplicationIcons = "Показывать иконки приложений",
