Оконный интерфейс штоле?

--- a/Applications/AppMarket/Localization/English.lang
+++ b/Applications/AppMarket/Localization/English.lang
@@ -4,20 +4,14 @@
 	wallpapers = "Wallpapers",
 	other = "Other",
 	updates = "Updates",
-	downloadingApplicationsList = "Downloading applications list",
+	checkingForUpdates = "Checking for updates",
 	version = "Version: ",
-	descriptionNotAvailable = "No description",
-	versionNotAvailable = "No version",
-	update = "Update",
+	updateAll = "Update all",
 	download = "Install",
 	downloading = "Installing",
 	downloaded = "Installed",
 	search = "Search",
-	errorWhileLoadingIcon = "Error while downloading icon",
-	errorWhileLoadingDescription = "Error while downloading description",
-	applicationsFrom = "Application from ",
-	applicationsTo = " to ",
+	page = "Page ",
 	youHaveNewestApps = "You have no updates.",
-	downloadingInfoAboutApplication = "Downloading information about application",
-	updating = "Installing",
+	updating = "Installing ",
 }
