--- a/Applications/AppMarket/Localization/Russian.lang
+++ b/Applications/AppMarket/Localization/Russian.lang
@@ -4,20 +4,14 @@
 	wallpapers = "Обои",
 	other = "Другое",
 	updates = "Обновления",
-	downloadingApplicationsList = "Загрузка списка приложений",
+	checkingForUpdates = "Проверка наличия обновлений",
 	version = "Версия: ",
-	descriptionNotAvailable = "Описание отсутствует",
-	versionNotAvailable = "Версия не указана",
-	update = "Обновить",
+	updateAll = "Обновить все",
 	download = "Загрузить",
 	downloading = "Загрузка",
 	downloaded = "Установлено",
 	search = "Поиск",
-	errorWhileLoadingIcon = "Ошибка при загрузке иконки приложения",
-	errorWhileLoadingDescription = "Ошибка при загрузке описания приложения",
-	applicationsFrom = "Приложения с ",
-	applicationsTo = " по ",
+	page = "Страница ",
 	youHaveNewestApps = "У вас самое новое ПО",
-	downloadingInfoAboutApplication = "Загрузка информации о приложении",
-	updating = "Обновление",
+	updating = "Обновление ",
 }
