--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -104,6 +104,7 @@
 	viewTab = "Вид",
 
 	errorWhileRunningProgram = "Ошибка при выполнении ",
+	sendedFeedback = "Отчет отправлен",
 	sendFeedback = "Отправить отчет",
 	yourContacts = "Ваши контакты",
 	additionalInfo = "Дополнительная информация",
