Полноценная оконна ось, ебать!

--- a/MineOS/Localization/English.lang
+++ b/MineOS/Localization/English.lang
@@ -1,4 +1,6 @@
 {
+	keepInDock = "Keep in dock",
+	launchWithArguments = "Launch with arguments",
 	dontShowAnymore = "Don't show again",
 	applicationHelp = "About application",
 	newName = "New name",
@@ -34,25 +36,19 @@
 	contextMenuEditInPhotoshop = "Edit in Photoshop",
 	contextMenuRename = "Rename",
 	contextMenuCreateShortcut = "Create shortcut",
-	contextMenuUploadToPastebin = "Upload to Pastebin",
 	contextMenuAddToDock = "Add to Dock",
 	contextMenuRemoveFromDock = "Remove from Dock",
 	contextMenuMoveRight = "Move right",
 	contextMenuMoveLeft = "Move left",
-	contextMenuArchive = "Compress",
+	contextMenuArchive = "Add to archive",
 	contextMenuDelete = "Delete",
 	contextMenuAddToFavourites = "Add to favourites",
 	contextMenuCreateApplication = "Create MineOS application",
 	contextMenuSetAsWallpaper = "Set as wallpaper",
 	contextMenuShowPackageContent = "Show package content",
 	contextMenuShowContainingFolder = "Show containing folder",
-	contextMenuRemoveFromFavourites = "Remove from favourites",
 	contextMenuFlashEEPROM = "Write file to EEPROM",
 
-	favourites = "Favourites",
-	disks = "HDDs",
-	network = "Network",
-	search = "Search",
 	sortByType = "Sort by type",
 	sortByName = "Sort by name",
 	sortByDate = "Sort by date",
@@ -109,13 +105,4 @@
 	yourContacts = "Your contacts",
 	additionalInfo = "Additional information",
 	stackTraceback = "Stack traceback",
-	fileDoesntExists = "File doesn't exists",
-	fileSuccessfullySent = "File has been successfully sent",
-	sendFile = "Send file",
-	pathToFile = "Path to file",
-	sendMessage = "Send message",
-	messageText = "Message text",
-	gotMessageFrom = "Got message from ",
-	gotFileFrom = "Got file from ",
-	pathToSave = "Path to save the file",
 }
