--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -1,4 +1,6 @@
 {
+	keepInDock = "Оставить в Dock",
+	launchWithArguments = "Запустить с аргументами",
 	dontShowAnymore = "Больше не показывать",
 	applicationHelp = "О приложении",
 	newName = "Новое имя",
@@ -34,25 +36,19 @@
 	contextMenuEditInPhotoshop = "Редактировать в Photoshop",
 	contextMenuRename = "Переименовать",
 	contextMenuCreateShortcut = "Создать ярлык",
-	contextMenuUploadToPastebin = "Загрузить на Pastebin",
 	contextMenuAddToDock = "Добавить в Dock",
 	contextMenuRemoveFromDock = "Удалить из Dock",
 	contextMenuMoveRight = "Передвинуть правее",
 	contextMenuMoveLeft = "Передвинуть левее",
-	contextMenuArchive = "Сжать",
+	contextMenuArchive = "Добавить в архив",
 	contextMenuDelete = "Удалить",
 	contextMenuAddToFavourites = "Добавить в избранное",
 	contextMenuCreateApplication = "Создать приложение MineOS",
 	contextMenuSetAsWallpaper = "Установить как обои",
 	contextMenuShowPackageContent = "Показать содержимое пакета",
 	contextMenuShowContainingFolder = "Открыть содержащую папку",
-	contextMenuRemoveFromFavourites = "Удалить из избранного",
 	contextMenuFlashEEPROM = "Записать файл на EEPROM",
 
-	favourites = "Избранное",
-	disks = "Диски",
-	network = "Сеть",
-	search = "Поиск",
 	sortByType = "Сортировать по типу",
 	sortByName = "Сортировать по имени",
 	sortByDate = "Сортировать по дате",
@@ -109,13 +105,4 @@
 	yourContacts = "Ваши контакты",
 	additionalInfo = "Дополнительная информация",
 	stackTraceback = "Стек ошибки",
-	fileDoesntExists = "Файл не существует",
-	fileSuccessfullySent = "Файл успешно отправлен",
-	sendFile = "Отправить файл",
-	pathToFile = "Путь к файлу",
-	sendMessage = "Сообщение",
-	messageText = "Текст сообщения",
-	gotMessageFrom = "Сообщение от ",
-	gotFileFrom = "Принят файл от ",
-	pathToSave = "Путь для сохранения",
 }
