Неебически опиздохуительная обновка #1

--- a/MineOS/Localization/English.lang
+++ b/MineOS/Localization/English.lang
@@ -1,4 +1,6 @@
 {
+	openWith = "Open with",
+	select = "Choose application…",
 	keepInDock = "Keep in dock",
 	launchWithArguments = "Launch with arguments",
 	dontShowAnymore = "Don't show again",
@@ -7,13 +9,24 @@
 	folderName = "Folder name",
 	fileName = "File name",
 	applicationName = "Application name",
-	fileAlreadyExists = "File already exists",
+	file = "File",
+	notExists = "not exists",
+	alreadyExists = "already exists",
+	inDirectory = "in directory",
+	needReplace = "Replace it?",
+	yes = "Yes",
+	no = "No",
+	cancel = "Cancel",
+	applyToAll = "Apply to all",
+	toDirectory = "to directory",
+	copying = "Copying",
+	faylaBlyad = "file",
 
 	resolution = "Screen resolution",
 	pressAnyKeyToContinue = "Press any key to continue",
 	screensaver = "Screensaver",
 	screensaverDelay = "Delay",
-	screensaverDisabled = "Disabled",
+	screensaverEnabled = "Screensaver enabled",
 
 	areYouSure = "Are you sure?",
 	emptyTrash = "Empty trash",
@@ -24,34 +37,37 @@
 	folder = "Folder",
 	unknown = "Unknown",
 	calculatingSize = "calculating…",
-	contextMenuProperties = "Properties",
-	contextMenuNewFile = "New file",
-	contextMenuNewFolder = "New folder",
-	contextMenuNewApplication = "New MineOS application",
-	contextMenuPaste = "Paste",
-	contextMenuCopy = "Copy",
-	contextMenuCut = "Cut",
-	contextMenuRemoveWallpaper = "Remove wallpaper",
-	contextMenuEdit = "Edit",
-	contextMenuEditInPhotoshop = "Edit in Photoshop",
-	contextMenuRename = "Rename",
-	contextMenuCreateShortcut = "Create shortcut",
-	contextMenuAddToDock = "Add to Dock",
-	contextMenuRemoveFromDock = "Remove from Dock",
-	contextMenuMoveRight = "Move right",
-	contextMenuMoveLeft = "Move left",
-	contextMenuArchive = "Add to archive",
-	contextMenuDelete = "Delete",
-	contextMenuAddToFavourites = "Add to favourites",
-	contextMenuCreateApplication = "Create MineOS application",
-	contextMenuSetAsWallpaper = "Set as wallpaper",
-	contextMenuShowPackageContent = "Show package content",
-	contextMenuShowContainingFolder = "Show containing folder",
-	contextMenuFlashEEPROM = "Write file to EEPROM",
 
-	sortByType = "Sort by type",
-	sortByName = "Sort by name",
-	sortByDate = "Sort by date",
+	view = "View",
+	properties = "Properties",
+	newFolder = "New folder",
+	newFolderFromChosen = "New folder from chosen",
+	newFile = "New file",
+	newApplication = "New MineOS application",
+	paste = "Paste",
+	copy = "Copy",
+	cut = "Cut",
+	edit = "Edit",
+	editInPhotoshop = "Edit in Photoshop",
+	rename = "Rename",
+	editShortcut = "Edit shortcut",
+	createShortcut = "Create shortcut",
+	addToDock = "Add to Dock",
+	removeFromDock = "Remove from Dock",
+	moveRight = "Move right",
+	moveLeft = "Move left",
+	archive = "Add to archive",
+	delete = "Delete",
+	addToFavourites = "Add to favourites",
+	setAsWallpaper = "Set as wallpaper",
+	showPackageContent = "Show package content",
+	showContainingFolder = "Show containing folder",
+	flashEEPROM = "Write on EEPROM",
+
+	sortBy = "Sorting method",
+	sortByType = "By type",
+	sortByName = "By name",
+	sortByDate = "By date",
 	showExtension = "Show file extension",
 	hideExtension = "Hide file extension",
 	showHiddenFiles = "Show hidden files",
@@ -87,22 +103,41 @@
 	mineOSCreatorUsedMasterPassword = "The creator of this operating system has used Master-Password",
 	loginToSystem = "Login",
 
-	appearance = "Appearance",
-	wallpaperProperties = "Wallpaper properties",
 	colorScheme = "Color scheme",
+	wallpaper = "Wallpaper",
 	wallpaperPath = "Path to wallpaper",
 	wallpaperModeStretch = "Stretch",
 	wallpaperModeCenter = "Center",
+	wallpaperEnabled = "Wallpaper enabled",
+	wallpaperSwitchInfo = "Disabling this option will decrease RAM usage and increase system perfomance",
 	backgroundColor = "Background color",
-	interfaceColor = "Interface color",
+	menuColor = "Menu color",
+	dockColor = "Dock color",
+	transparencyEnabled = "Transparency enabled",
+	transparencySwitchInfo = "Disabling this option will increase system perfomance",
 	screenResolution = "Screen resolution",
 	changePassword = "Change password",
-	cancel = "Cancel",
-	shortcut = "shortcut",
-	shortcutIsCorrupted = "Shortcut is corrupted",
+	shortcutIsCorrupted = "Shortcut is linked to non-existent file",
+	sortAutomatically = "Align to grid",
+	onDesktop = "On desktop",
+	inCurrentDirectory = "In current directory",
 
 	settings = "Preferences",
-	viewTab = "View",
+	months = {
+		Jan = "Jan",
+		Feb = "Feb",
+		Mar = "Mar",
+		Apr = "Apr",
+		May = "May",
+		Jun = "Jun",
+		Jul = "Jul",
+		Aug = "Aug",
+		Sep = "Sep",
+		Oct = "Oct",
+		Nov = "Nov",
+		Dec = "Dec",
+	},
+	timezone = "Timezone",
 
 	errorWhileRunningProgram = "Error while running ",
 	sendedFeedback = "Feedback was sent",
