--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -1,4 +1,6 @@
 {
+	openWith = "Открыть с помощью",
+	select = "Выбрать программу…",
 	keepInDock = "Оставить в Dock",
 	launchWithArguments = "Запустить с аргументами",
 	dontShowAnymore = "Больше не показывать",
@@ -7,13 +9,24 @@
 	folderName = "Имя папки",
 	fileName = "Имя файла",
 	applicationName = "Имя приложения",
-	fileAlreadyExists = "Файл уже существует",
+	file = "Файл",
+	notExists = "не существует",
+	alreadyExists = "уже существует",
+	inDirectory = "в директории",
+	needReplace = "Заменить?",
+	yes = "Да",
+	no = "Нет",
+	cancel = "Отмена",
+	applyToAll = "Применить ко всем",
+	toDirectory = "в директории",
+	copying = "Копирование",
+	faylaBlyad = "файла",
 
 	resolution = "Разрешение экрана",
 	pressAnyKeyToContinue = "Нажмите любую клавишу, чтобы продолжить",
 	screensaver = "Заставка",
 	screensaverDelay = "Задержка",
-	screensaverDisabled = "Отключена",
+	screensaverEnabled = "Использовать заставку",
 
 	areYouSure = "Вы уверены?",
 	emptyTrash = "Очистить корзину",
@@ -24,34 +37,37 @@
 	folder = "Папка",
 	unknown = "Неизвестно",
 	calculatingSize = "идет подсчет…",
-	contextMenuProperties = "Свойства",
-	contextMenuNewFile = "Новый файл",
-	contextMenuNewFolder = "Новая папка",
-	contextMenuNewApplication = "Новое приложение MineOS",
-	contextMenuPaste = "Вставить",
-	contextMenuCopy = "Копировать",
-	contextMenuCut = "Вырезать",
-	contextMenuRemoveWallpaper = "Удалить обои",
-	contextMenuEdit = "Редактировать",
-	contextMenuEditInPhotoshop = "Редактировать в Photoshop",
-	contextMenuRename = "Переименовать",
-	contextMenuCreateShortcut = "Создать ярлык",
-	contextMenuAddToDock = "Добавить в Dock",
-	contextMenuRemoveFromDock = "Удалить из Dock",
-	contextMenuMoveRight = "Передвинуть правее",
-	contextMenuMoveLeft = "Передвинуть левее",
-	contextMenuArchive = "Добавить в архив",
-	contextMenuDelete = "Удалить",
-	contextMenuAddToFavourites = "Добавить в избранное",
-	contextMenuCreateApplication = "Создать приложение MineOS",
-	contextMenuSetAsWallpaper = "Установить как обои",
-	contextMenuShowPackageContent = "Показать содержимое пакета",
-	contextMenuShowContainingFolder = "Открыть содержащую папку",
-	contextMenuFlashEEPROM = "Записать файл на EEPROM",
+	
+	view = "Вид",
+	properties = "Свойства",
+	newFolder = "Новая папка",
+	newFolderFromChosen = "Новая папка из выбранного",
+	newFile = "Новый файл",
+	newApplication = "Новое приложение MineOS",
+	paste = "Вставить",
+	copy = "Копировать",
+	cut = "Вырезать",
+	edit = "Редактировать",
+	editInPhotoshop = "Редактировать в Photoshop",
+	rename = "Переименовать",
+	editShortcut = "Редактировать ярлык",
+	createShortcut = "Создать ярлык",
+	addToDock = "Добавить в Dock",
+	removeFromDock = "Удалить из Dock",
+	moveRight = "Передвинуть правее",
+	moveLeft = "Передвинуть левее",
+	archive = "Добавить в архив",
+	delete = "Удалить",
+	addToFavourites = "Добавить в избранное",
+	setAsWallpaper = "Установить как обои",
+	showPackageContent = "Показать содержимое пакета",
+	showContainingFolder = "Открыть содержащую папку",
+	flashEEPROM = "Записать на EEPROM",
 
-	sortByType = "Сортировать по типу",
-	sortByName = "Сортировать по имени",
-	sortByDate = "Сортировать по дате",
+	sortBy = "Сортировка файлов",
+	sortByType = "По типу",
+	sortByName = "По имени",
+	sortByDate = "По дате",
 	showExtension = "Показывать расширение файлов",
 	hideExtension = "Скрывать расширение файлов",
 	showHiddenFiles = "Показывать скрытые файлы",
@@ -87,22 +103,41 @@
 	mineOSCreatorUsedMasterPassword = "Создатель операционной системы использовал мастер-ключ",
 	loginToSystem = "Вход в систему",
 
-	appearance = "Внешний вид",
-	wallpaperProperties = "Параметры обоев",
 	colorScheme = "Цветовая схема",
+	wallpaper = "Обои",
 	wallpaperPath = "Путь к обоям",
 	wallpaperModeStretch = "Растянуть",
 	wallpaperModeCenter = "По центру",
+	wallpaperEnabled = "Использовать обои",
+	wallpaperSwitchInfo = "Отключение этой опции существенно снизит расход оперативной памяти и увеличит производительность",
 	backgroundColor = "Цвет фона",
-	interfaceColor = "Цвет интерфейса",
+	menuColor = "Цвет меню",
+	dockColor = "Цвет Dock",
+	transparencyEnabled = "Прозрачность интерфейса",
+	transparencySwitchInfo = "Отключение этой опции существенно снизит количество прямых обращений к CPU и увеличит производительность",
 	screenResolution = "Разрешение экрана",
 	changePassword = "Изменить пароль",
-	cancel = "Отмена",
-	shortcut = "ярлык",
-	shortcutIsCorrupted = "Файл ярлыка поврежден или имеет неизвестный формат",
+	shortcutIsCorrupted = "Ярлык ссылается на несуществующий файл",
+	sortAutomatically = "Привязать к сетке",
+	onDesktop = "На рабочем столе",
+	inCurrentDirectory = "В текущей директории",
 
 	settings = "Настройки",
-	viewTab = "Вид",
+	months = {
+		Jan = "Января",
+		Feb = "Февраля",
+		Mar = "Марта",
+		Apr = "Апреля",
+		May = "Мая",
+		Jun = "Июня",
+		Jul = "Июля",
+		Aug = "Августа",
+		Sep = "Сентября",
+		Oct = "Октября",
+		Nov = "Ноября",
+		Dec = "Декабря",
+	},
+	timezone = "Временная зона",
 
 	errorWhileRunningProgram = "Ошибка при выполнении ",
 	sendedFeedback = "Отчет отправлен",
