Новый графонистый файловый менеджер

--- a/MineOS/Localization/English.lang
+++ b/MineOS/Localization/English.lang
@@ -17,6 +17,7 @@
 	yes = "Yes",
 	no = "No",
 	cancel = "Cancel",
+	open = "Open",
 	applyToAll = "Apply to all",
 	toDirectory = "to directory",
 	copying = "Copying",
