--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -17,6 +17,7 @@
 	yes = "Да",
 	no = "Нет",
 	cancel = "Отмена",
+	open = "Открыть",
 	applyToAll = "Применить ко всем",
 	toDirectory = "в директории",
 	copying = "Копирование",
