--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -41,11 +41,12 @@
 	
 	view = "Вид",
 	properties = "Свойства",
-	newFolder = "Новая папка",
 	newFolderFromChosen = "Новая папка из выбранного",
-	newFile = "Новый файл",
-	newFileFromURL = "Загрузить файл по URL",
-	newApplication = "Новое приложение MineOS",
+	create = "Создать",
+	newFolder = "Папку",
+	newFile = "Файл",
+	newFileFromURL = "Файл по URL",
+	newApplication = "Приложение MineOS",
 	paste = "Вставить",
 	copy = "Копировать",
 	cut = "Вырезать",
@@ -108,6 +109,7 @@
 	colorScheme = "Цветовая схема",
 	wallpaper = "Обои",
 	wallpaperPath = "Путь к обоям",
+	iconPath = "Путь к иконке",
 	wallpaperModeStretch = "Растянуть",
 	wallpaperModeCenter = "По центру",
 	wallpaperEnabled = "Использовать обои",
