--- a/MineOS/Localization/English.lang
+++ b/MineOS/Localization/English.lang
@@ -41,11 +41,12 @@
 
 	view = "View",
 	properties = "Properties",
-	newFolder = "New folder",
 	newFolderFromChosen = "New folder from chosen",
-	newFile = "New file",
-	newFileFromURL = "New file from URL",
-	newApplication = "New MineOS application",
+	create = "New",
+	newFolder = "Folder",
+	newFile = "File",
+	newFileFromURL = "File from URL",
+	newApplication = "MineOS application",
 	paste = "Paste",
 	copy = "Copy",
 	cut = "Cut",
@@ -108,6 +109,7 @@
 	colorScheme = "Color scheme",
 	wallpaper = "Wallpaper",
 	wallpaperPath = "Path to wallpaper",
+	iconPath = "Path to icon",
 	wallpaperModeStretch = "Stretch",
 	wallpaperModeCenter = "Center",
 	wallpaperEnabled = "Wallpaper enabled",
