Жирная обнова с поддержкой FTP

--- a/MineOS/Localization/English.lang
+++ b/MineOS/Localization/English.lang
@@ -1,4 +1,19 @@
 {
+	network = "Network",
+	networkTimeout = "Remote computer is not responding",
+	networkMessage = "Got network message from ",
+	networkAccessDenied = "Access to the filesystem of the remote computer is denied. Contact it's owner to get appropriate privileges",
+	networkAllowReadAndWrite = "Allow filesystem access",
+	networkDenyReadAndWrite = "Deny filesystem access",
+	networkModemNotAvailable = "Modem is not available",
+	networkDisable = "Disable",
+	networkEnable = "Enable",
+	networkComputersNotFound = "Computers not fount",
+	networkName = "Network name",
+	networkSearchRadius = "Searching radius",
+	networkAllowMessages = "Allow to send messages",
+	networkDenyMessages = "Deny to send messages",
+	networkSendMessage = "Send messsage",
 	openWith = "Open with",
 	select = "Choose application…",
 	keepInDock = "Keep in dock",
