--- a/MineOS/Localization/Russian.lang
+++ b/MineOS/Localization/Russian.lang
@@ -1,4 +1,19 @@
 {
+	network = "Сеть",
+	networkTimeout = "Удаленный компьютер не ответил на запрос",
+	networkMessage = "Получено сообщение от ",
+	networkAccessDenied = "Доступ к файловой системе удаленного компьютера запрещен. Свяжитесь с его владельцем для предоставления соответствующих привилегий",
+	networkAllowReadAndWrite = "Разрешить доступ к файлам",
+	networkDenyReadAndWrite = "Запретить доступ к файлам",
+	networkModemNotAvailable = "Модем не подключен",
+	networkDisable = "Отключить",
+	networkEnable = "Включить",
+	networkComputersNotFound = "Компьютеры не обнаружены",
+	networkName = "Имя компьютера",
+	networkSearchRadius = "Радиус обнаружения",
+	networkAllowMessages = "Разрешить отправку сообщений",
+	networkDenyMessages = "Запретить отправку сообщений",
+	networkSendMessage = "Отправить сообщение",
 	openWith = "Открыть с помощью",
 	select = "Выбрать программу…",
 	keepInDock = "Оставить в Dock",
